force-app/main/default/objects/GRAXEmbedConfiguration__c/GRAXEmbedConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GRAX Configuration Settings</label>
</CustomObject>