force-app/main/default/objects/GRAXEmbedConfiguration__c/fields/ApiToken__c.field-meta.xml
<CustomField>
    <fullName>ApiToken__c</fullName>
    <description>GRAX Settings: Heroku Setting ENGAGEMENTGRAPH_APITOKEN</description>
    <inlineHelpText>GRAX Settings: Heroku Setting ENGAGEMENTGRAPH_APITOKEN</inlineHelpText>
    <label>ApiToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>