force-app/main/default/objects/GRAXEmbedConfiguration__c/fields/GatewayToken__c.field-meta.xml
<CustomField>
    <fullName>GatewayToken__c</fullName>
    <description>GRAX Settings: Heroku Setting ENGAGEMENTGRAPH_GATEWAYTOKEN</description>
    <inlineHelpText>GRAX Settings: Heroku Setting ENGAGEMENTGRAPH_GATEWAYTOKEN</inlineHelpText>
    <label>GatewayToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>