force-app/main/default/objects/GRAXEmbedConfiguration__c/fields/GRAXApiUrl__c.field-meta.xml
<CustomField>
    <fullName>GRAXApiUrl__c</fullName>
    <description>GRAX Api URL</description>
    <inlineHelpText>GRAX Api URL</inlineHelpText>
    <label>API Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>