force-app/main/default/objects/GRAXEmbedConfiguration__c/fields/LicenseToken__c.field-meta.xml
<CustomField>
    <fullName>LicenseToken__c</fullName>
    <description>GRAX Settings: Heroku Setting ENGAGEMENTGRAPH_LICENSETOKEN</description>
    <inlineHelpText>GRAX Settings: Heroku Setting ENGAGEMENTGRAPH_LICENSETOKEN</inlineHelpText>
    <label>LicenseToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>